<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoedetailFragment">

    <data>
        <variable
            name="shoedetailViewModel"
            type="com.udacity.shoestore.ShoedetailViewModel" />
    </data>

    <!-- constraint layout was used to maintain relation between
   different controls on diffrent resolutiond-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoedetail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/shoename_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/shoename_string"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoename_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/description_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/description_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoesize_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/shoesize_string"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoesize_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/company_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/company_string"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_text"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoename_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoedetailViewModel.shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/company_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoename_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/company_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoedetailViewModel.shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/shoesize_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/company_view"
            app:layout_constraintTop_toBottomOf="@+id/shoename_text" />

        <EditText
            android:id="@+id/shoesize_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={`` + shoedetailViewModel.shoe.size}"
            app:layout_constraintBottom_toTopOf="@+id/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoesize_view"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <EditText
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoedetailViewModel.shoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description_view"
            app:layout_constraintTop_toBottomOf="@+id/shoesize_text" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/cancel_string"
            android:textColor="@color/colorPrimary"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/save_string"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>