<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Welcome.WelcomeFragment">

    <!-- constraint layout was used to maintain relation between
   different controls on diffrent resolutiond-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="@dimen/button_padding"
            android:text="@string/welcome_title_string"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/title_size"
            app:layout_constraintBottom_toTopOf="@+id/content_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/content_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="@dimen/button_padding"
            android:text="@string/welcome_content_string"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/content_size"
            app:layout_constraintBottom_toTopOf="@+id/instructions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_view" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/instructions_string"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

<!--        <Button-->
<!--            android:id="@+id/shoelist_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            android:backgroundTint="@color/colorPrimaryDark"-->
<!--            android:text="@string/shoelist_string"-->
<!--            android:textColor="@color/colorWhite"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toEndOf="@+id/instructions_button" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>